src/js/renderer/util/SelectorParser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

'use strict'

function peg$subclass(child, parent) {
  function ctor() {
    this.constructor = child
  }
  ctor.prototype = parent.prototype
  child.prototype = new ctor()
}

function peg$SyntaxError(message, expected, found, location) {
  this.message = message
  this.expected = expected
  this.found = found
  this.location = location
  this.name = 'SyntaxError'

  if (typeof Error.captureStackTrace === 'function') {
    Error.captureStackTrace(this, peg$SyntaxError)
  }
}

peg$subclass(peg$SyntaxError, Error)

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return '"' + literalEscape(expectation.text) + '"'
    },

    class: function(expectation) {
      var escapedParts = '',
        i

      for (i = 0; i < expectation.parts.length; i++) {
        escapedParts +=
          expectation.parts[i] instanceof Array
            ? classEscape(expectation.parts[i][0]) +
              '-' +
              classEscape(expectation.parts[i][1])
            : classEscape(expectation.parts[i])
      }

      return '[' + (expectation.inverted ? '^' : '') + escapedParts + ']'
    },

    any: function(expectation) {
      return 'any character'
    },

    end: function(expectation) {
      return 'end of input'
    },

    other: function(expectation) {
      return expectation.description
    },
  }

  function hex(ch) {
    return ch
      .charCodeAt(0)
      .toString(16)
      .toUpperCase()
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g, '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function(ch) {
        return '\\x0' + hex(ch)
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
        return '\\x' + hex(ch)
      })
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g, '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g, function(ch) {
        return '\\x0' + hex(ch)
      })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) {
        return '\\x' + hex(ch)
      })
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation)
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
      i,
      j

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i])
    }

    descriptions.sort()

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i]
          j++
        }
      }
      descriptions.length = j
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0]

      case 2:
        return descriptions[0] + ' or ' + descriptions[1]

      default:
        return (
          descriptions.slice(0, -1).join(', ') +
          ', or ' +
          descriptions[descriptions.length - 1]
        )
    }
  }

  function describeFound(found) {
    return found ? '"' + literalEscape(found) + '"' : 'end of input'
  }

  return (
    'Expected ' +
    describeExpected(expected) +
    ' but ' +
    describeFound(found) +
    ' found.'
  )
}

function peg$parse(input, options) {
  options = options !== void 0 ? options : {}

  var peg$FAILED = {},
    peg$startRuleFunctions = { start: peg$parsestart },
    peg$startRuleFunction = peg$parsestart,
    peg$c0 = function(selector) {
      return selector
    },
    peg$c1 = peg$anyExpectation(),
    peg$c2 = function() {
      return []
    },
    peg$c3 = /^[ ]/,
    peg$c4 = peg$classExpectation([' '], false, false),
    peg$c5 = /^[,]/,
    peg$c6 = peg$classExpectation([','], false, false),
    peg$c7 = '[',
    peg$c8 = peg$literalExpectation('[', false),
    peg$c9 = ']',
    peg$c10 = peg$literalExpectation(']', false),
    peg$c11 = function(el, el2) {
      if (el2 instanceof Array) {
        return [el, ...el2]
      } else {
        return [el, el2]
      }
    },
    peg$c12 = function(el) {
      return el
    },
    peg$c13 = function(value) {
      return {
        type: 'idSelector',
        value,
      }
    },
    peg$c14 = function(value) {
      return {
        type: 'classSelector',
        value,
      }
    },
    peg$c15 = '.',
    peg$c16 = peg$literalExpectation('.', false),
    peg$c17 = function(name) {
      return name
    },
    peg$c18 = '#',
    peg$c19 = peg$literalExpectation('#', false),
    peg$c20 = /^[ ,.#[\]]/,
    peg$c21 = peg$classExpectation(
      [' ', ',', '.', '#', '[', ']'],
      false,
      false
    ),
    peg$c22 = /^[a-zA-Z]/,
    peg$c23 = peg$classExpectation([['a', 'z'], ['A', 'Z']], false, false),
    peg$c24 = /^[a-zA-Z0-9\-_:.]/,
    peg$c25 = peg$classExpectation(
      [['a', 'z'], ['A', 'Z'], ['0', '9'], '-', '_', ':', '.'],
      false,
      false
    ),
    peg$currPos = 0,
    peg$savedPos = 0,
    peg$posDetailsCache = [{ line: 1, column: 1 }],
    peg$maxFailPos = 0,
    peg$maxFailExpected = [],
    peg$silentFails = 0,
    peg$result

  if ('startRule' in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error(
        'Can\'t start parsing from rule "' + options.startRule + '".'
      )
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule]
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos)
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos)
  }

  function expected(description, location) {
    location =
      location !== void 0
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    )
  }

  function error(message, location) {
    location =
      location !== void 0
        ? location
        : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location)
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: 'literal', text: text, ignoreCase: ignoreCase }
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return {
      type: 'class',
      parts: parts,
      inverted: inverted,
      ignoreCase: ignoreCase,
    }
  }

  function peg$anyExpectation() {
    return { type: 'any' }
  }

  function peg$endExpectation() {
    return { type: 'end' }
  }

  function peg$otherExpectation(description) {
    return { type: 'other', description: description }
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos],
      p

    if (details) {
      return details
    } else {
      p = pos - 1
      while (!peg$posDetailsCache[p]) {
        p--
      }

      details = peg$posDetailsCache[p]
      details = {
        line: details.line,
        column: details.column,
      }

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++
          details.column = 1
        } else {
          details.column++
        }

        p++
      }

      peg$posDetailsCache[pos] = details
      return details
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
      endPosDetails = peg$computePosDetails(endPos)

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    }
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) {
      return
    }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos
      peg$maxFailExpected = []
    }

    peg$maxFailExpected.push(expected)
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location)
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    )
  }

  function peg$parsestart() {
    var s0, s1, s2

    s0 = peg$currPos
    s1 = []
    s2 = peg$parse_()
    while (s2 !== peg$FAILED) {
      s1.push(s2)
      s2 = peg$parse_()
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSelector()
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$c0(s2)
        s0 = s1
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos
      s1 = []
      if (input.length > peg$currPos) {
        s2 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s2 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c1)
        }
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2)
        if (input.length > peg$currPos) {
          s2 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s2 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c1)
          }
        }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$c2()
      }
      s0 = s1
    }

    return s0
  }

  function peg$parse_() {
    var s0, s1

    s0 = []
    if (peg$c3.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos)
      peg$currPos++
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c4)
      }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1)
        if (peg$c3.test(input.charAt(peg$currPos))) {
          s1 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s1 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c4)
          }
        }
      }
    } else {
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseCOMMA() {
    var s0

    if (peg$c5.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos)
      peg$currPos++
    } else {
      s0 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c6)
      }
    }

    return s0
  }

  function peg$parseSelector() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11

    s0 = peg$currPos
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c7
      peg$currPos++
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c8)
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_()
      if (s2 === peg$FAILED) {
        s2 = null
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseElement()
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_()
          if (s4 === peg$FAILED) {
            s4 = null
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseCOMMA()
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_()
              if (s6 === peg$FAILED) {
                s6 = null
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parseSelector()
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_()
                  if (s8 === peg$FAILED) {
                    s8 = null
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parseCOMMA()
                    if (s9 === peg$FAILED) {
                      s9 = null
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parse_()
                      if (s10 === peg$FAILED) {
                        s10 = null
                      }
                      if (s10 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 93) {
                          s11 = peg$c9
                          peg$currPos++
                        } else {
                          s11 = peg$FAILED
                          if (peg$silentFails === 0) {
                            peg$fail(peg$c10)
                          }
                        }
                        if (s11 !== peg$FAILED) {
                          peg$savedPos = s0
                          s1 = peg$c11(s3, s7)
                          s0 = s1
                        } else {
                          peg$currPos = s0
                          s0 = peg$FAILED
                        }
                      } else {
                        peg$currPos = s0
                        s0 = peg$FAILED
                      }
                    } else {
                      peg$currPos = s0
                      s0 = peg$FAILED
                    }
                  } else {
                    peg$currPos = s0
                    s0 = peg$FAILED
                  }
                } else {
                  peg$currPos = s0
                  s0 = peg$FAILED
                }
              } else {
                peg$currPos = s0
                s0 = peg$FAILED
              }
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos
      s1 = peg$parseElement()
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_()
        if (s2 === peg$FAILED) {
          s2 = null
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseCOMMA()
          if (s3 === peg$FAILED) {
            s3 = null
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_()
            if (s4 === peg$FAILED) {
              s4 = null
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseSelector()
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0
                s1 = peg$c11(s1, s5)
                s0 = s1
              } else {
                peg$currPos = s0
                s0 = peg$FAILED
              }
            } else {
              peg$currPos = s0
              s0 = peg$FAILED
            }
          } else {
            peg$currPos = s0
            s0 = peg$FAILED
          }
        } else {
          peg$currPos = s0
          s0 = peg$FAILED
        }
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos
        s1 = peg$parseElement()
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0
          s1 = peg$c12(s1)
        }
        s0 = s1
      }
    }

    return s0
  }

  function peg$parseElement() {
    var s0, s1

    s0 = peg$currPos
    s1 = peg$parseIdSelector()
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c13(s1)
    }
    s0 = s1
    if (s0 === peg$FAILED) {
      s0 = peg$currPos
      s1 = peg$parseClassSelector()
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$c14(s1)
      }
      s0 = s1
    }

    return s0
  }

  function peg$parseClassSelector() {
    var s0, s1, s2

    s0 = peg$currPos
    if (input.charCodeAt(peg$currPos) === 46) {
      s1 = peg$c15
      peg$currPos++
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c16)
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseClassName()
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$c17(s2)
        s0 = s1
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos
      s1 = peg$parseClassName()
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$c17(s1)
      }
      s0 = s1
    }

    return s0
  }

  function peg$parseIdSelector() {
    var s0, s1, s2

    s0 = peg$currPos
    if (input.charCodeAt(peg$currPos) === 35) {
      s1 = peg$c18
      peg$currPos++
    } else {
      s1 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c19)
      }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseIdName()
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0
        s1 = peg$c17(s2)
        s0 = s1
      } else {
        peg$currPos = s0
        s0 = peg$FAILED
      }
    } else {
      peg$currPos = s0
      s0 = peg$FAILED
    }

    return s0
  }

  function peg$parseClassName() {
    var s0, s1, s2, s3, s4, s5

    s0 = peg$currPos
    s1 = peg$currPos
    s2 = []
    s3 = peg$currPos
    s4 = peg$currPos
    peg$silentFails++
    if (peg$c20.test(input.charAt(peg$currPos))) {
      s5 = input.charAt(peg$currPos)
      peg$currPos++
    } else {
      s5 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c21)
      }
    }
    peg$silentFails--
    if (s5 === peg$FAILED) {
      s4 = void 0
    } else {
      peg$currPos = s4
      s4 = peg$FAILED
    }
    if (s4 !== peg$FAILED) {
      if (input.length > peg$currPos) {
        s5 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s5 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c1)
        }
      }
      if (s5 !== peg$FAILED) {
        s4 = [s4, s5]
        s3 = s4
      } else {
        peg$currPos = s3
        s3 = peg$FAILED
      }
    } else {
      peg$currPos = s3
      s3 = peg$FAILED
    }
    if (s3 !== peg$FAILED) {
      while (s3 !== peg$FAILED) {
        s2.push(s3)
        s3 = peg$currPos
        s4 = peg$currPos
        peg$silentFails++
        if (peg$c20.test(input.charAt(peg$currPos))) {
          s5 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s5 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c21)
          }
        }
        peg$silentFails--
        if (s5 === peg$FAILED) {
          s4 = void 0
        } else {
          peg$currPos = s4
          s4 = peg$FAILED
        }
        if (s4 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos)
            peg$currPos++
          } else {
            s5 = peg$FAILED
            if (peg$silentFails === 0) {
              peg$fail(peg$c1)
            }
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5]
            s3 = s4
          } else {
            peg$currPos = s3
            s3 = peg$FAILED
          }
        } else {
          peg$currPos = s3
          s3 = peg$FAILED
        }
      }
    } else {
      s2 = peg$FAILED
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos)
    } else {
      s1 = s2
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c17(s1)
    }
    s0 = s1

    return s0
  }

  function peg$parseIdName() {
    var s0, s1, s2, s3, s4, s5

    s0 = peg$currPos
    s1 = peg$currPos
    s2 = peg$currPos
    if (peg$c22.test(input.charAt(peg$currPos))) {
      s3 = input.charAt(peg$currPos)
      peg$currPos++
    } else {
      s3 = peg$FAILED
      if (peg$silentFails === 0) {
        peg$fail(peg$c23)
      }
    }
    if (s3 !== peg$FAILED) {
      s4 = []
      if (peg$c24.test(input.charAt(peg$currPos))) {
        s5 = input.charAt(peg$currPos)
        peg$currPos++
      } else {
        s5 = peg$FAILED
        if (peg$silentFails === 0) {
          peg$fail(peg$c25)
        }
      }
      while (s5 !== peg$FAILED) {
        s4.push(s5)
        if (peg$c24.test(input.charAt(peg$currPos))) {
          s5 = input.charAt(peg$currPos)
          peg$currPos++
        } else {
          s5 = peg$FAILED
          if (peg$silentFails === 0) {
            peg$fail(peg$c25)
          }
        }
      }
      if (s4 !== peg$FAILED) {
        s3 = [s3, s4]
        s2 = s3
      } else {
        peg$currPos = s2
        s2 = peg$FAILED
      }
    } else {
      peg$currPos = s2
      s2 = peg$FAILED
    }
    if (s2 !== peg$FAILED) {
      s1 = input.substring(s1, peg$currPos)
    } else {
      s1 = s2
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0
      s1 = peg$c17(s1)
    }
    s0 = s1

    return s0
  }

  peg$result = peg$startRuleFunction()

  if (peg$result !== peg$FAILED && peg$currPos === input.length) {
    return peg$result
  } else {
    if (peg$result !== peg$FAILED && peg$currPos < input.length) {
      peg$fail(peg$endExpectation())
    }

    throw peg$buildStructuredError(
      peg$maxFailExpected,
      peg$maxFailPos < input.length ? input.charAt(peg$maxFailPos) : null,
      peg$maxFailPos < input.length
        ? peg$computeLocation(peg$maxFailPos, peg$maxFailPos + 1)
        : peg$computeLocation(peg$maxFailPos, peg$maxFailPos)
    )
  }
}

module.exports = {
  SyntaxError: peg$SyntaxError,
  parse: peg$parse,
}
